// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makePlugin 1`] = `
"
          <div className=\\"\\">
            <pluginprovider
              name='test'
              plugins=!{props.plugins!}
              options=!{!{\\"options\\":[],\\"props\\":!{!}!}!}
            >
        
          </pluginprovider>
        </div>
      "
`;

exports[`makePlugin 2`] = `
"
          <div className=\\"\\">
            <pluginprovider
              name='test'
              plugins=!{props.plugins!}
              options=!{!{\\"options\\":[\\"with\\",\\"some\\",\\"options\\"],\\"props\\":!{!}!}!}
            >
        
          </pluginprovider>
        </div>
      "
`;

exports[`makePlugin 3`] = `
"
          <div className=\\"\\">
            <pluginprovider
              name='test'
              plugins=!{props.plugins!}
              options=!{!{\\"options\\":[],\\"props\\":!{\\"with\\":\\"some\\",\\"props\\":10!}!}!}
            >
        
          </pluginprovider>
        </div>
      "
`;

exports[`makePlugin 4`] = `
"
          <div className=\\"\\">
            <pluginprovider
              name='test'
              plugins=!{props.plugins!}
              options=!{!{\\"options\\":[\\"with\\",\\"both\\"],\\"props\\":!{\\"props\\":\\"options\\"!}!}!}
            >
        
          </pluginprovider>
        </div>
      "
`;
